test/invalid/fc34950_Abstract_Override_sheep/SheeTypeB.plume
/**
 * SheepTypeB.plume
 *
 * Test: This class represent a Sheep of third generation
 * that will extends SheepTypeA and abstract the method generation (error)
 *
 * @author namartins
 * @version $Id: SheeTypeB.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 abstract class SheepTypeB extends SheepTypeA is	
 	abstract method  generation : () -> Integer 